the updated version of CV (and a dirty photo of me)

--- a/Org/CV (ORG).org
+++ b/Org/CV (ORG).org
@@ -1,5 +1,10 @@
 * CV: Anton Kotenko
 
+#+CAPTION: Me
+#+ATTR_HTML: :width 120px
+#+ATTR_HTML: :height 120px
+[[CV/assets/my_photo.jpeg]]
+
   - E-mail: shaman.sir@gmail.com
   - Location: Munich, Germany
   - Phone: +49 176 84181188
@@ -43,7 +48,7 @@ Aside from that, I was doing FrontEnd development for jetbrains.com website, som
   - /Munich/, /Germany/ 
 
 - Technologies: :: JavaScript, React, Elm, HTML5 Canvas, GLSL Shaders, d3.js, Kotlin JS, Kotlin, DHall, PureScript
-- Tags: :: #generative-art, #react, #redux, #elm, #dhall, #kotlin-js, #user-interfaces
+- Tags: :: #generative-art, #react, #redux, #elm, #glsl, #shaders, #html5-canvas, #animation, #dhall, #kotlin-js, #user-interfaces
 
 *** Animatron LLC
 *GWT/JS Developer*
@@ -61,7 +66,7 @@ At Animatron, I mostly developed the Web Player based on HTML5 Canvas technology
   - /Boston/, /United States, MA/ 
 
 - Technologies: :: Java, Google Web Toolkit (GWT), JavaScript, HTML5 Canvas
-- Tags: :: #canvas, #javascript, #animation, #gwt, #svg, #graphics
+- Tags: :: #html5-canvas, #javascript, #animation, #gwt, #svg, #graphics
 
 *** iPark Ventures
 *GWT Developer*
@@ -406,524 +411,570 @@ The huge (but as fun as possible) talk in three parts on how you could architect
 
 ** Projects
 
-  - *Noodle*
-
-Visual Programming for producing Generative Art and more, with CLI & Web & VR (planned) frot-ends, written in PureScript
-
-/Status:/ Almost Finished (at least looks like it)
-
-/Started:/ more than five years ago
-
-([[https://github.com/shamansir/noodle][GH:noodle]], [[https://noodle.labs.jb.gg/][Last working Noodle Demo]])
-
-/Tags:/ #purescript, #visual-programming, #functional-programming, #generative-art
-
+*** Finished (to some point)
 
   - *RPD*
 
 Visual Programming for Generative Art, in JavaScript, driven by Reactive Streams Programming
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than ten years ago
+Started: more than ten years ago
 
 ([[https://github.com/shamansir/rpd][GH:rpd]], [[https://shamansir.github.io/rpd][RPD Docs & Demos]])
 
-/Tags:/ #javascript, #svg, #visual-programming, #generative-art, #reactive-programming, #kefir.js, #computational-arts
+Tags: #javascript, #svg, #visual-programming, #generative-art, #reactive-programming, #kefir.js, #computational-arts
 
 
   - *Tron GUI*
 
 Innovative approach for generative art User Interfaces: now grid-based
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ around two-three years ago
+Started: around two-three years ago
 
 ([[https://github.com/shamansir/tron-gui][GH:tron-gui]], [[https://tron.labs.jb.gg/][Tron Constructor @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]], [[https://tiler.labs.jb.gg/][Tiler @ CAI usage example]], [[https://neobeam.labs.jb.gg/][Neobeam @ CAI usage example]], [[https://plasmatic.labs.jb.gg/][Plasmatic @ CAI usage example]])
 
-/Tags:/ #elm, #gui, #user-interface, #functional-programming, #dhall, #javascript, #generative-art, #computational-arts, #graphs
-
-
-  - *Kvant*
-
-Translating Wave Function Collapse algorithm to Elm, and UI for it
-
-/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
-
-/Started:/ around four-five years ago
-
-([[https://github.com/shamansir/kvant][GH:kvant]], [[https://kvant.labs.jb.gg/][Kvant Demo @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
-
-/Tags:/ #elm, #gui, #generative-art, #functional-programming, #computational-arts
+Tags: #elm, #gui, #user-interface, #functional-programming, #dhall, #javascript, #generative-art, #computational-arts, #graphs
 
 
   - *iElm*
 
 Interactive Visual REPL for Elm language, showing types and SVG and even `elm-canvas` Graphics
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ around four-five years ago
+Started: around four-five years ago
 
 ([[https://github.com/shamansir/ielm][GH:ielm]])
 
-/Tags:/ #elm, #repl, #functional-programming
+Tags: #elm, #repl, #functional-programming
 
 
   - *node-elm-repl*
 
 CLI client for iElm to get the information about the type of the entered expression
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ around four-five years ago
+Started: around four-five years ago
 
 ([[https://github.com/shamansir/node-elm-repl][GH:node-elm-repl]])
 
-/Tags:/ #elm, #javasript, #binary, #repl, #functional-programming
-
-
-  - *purescript-blessed*
-
-Port of JavaScript Blessed library, which is the powerful window management and component library for Command-Line-interfaces (CLI)
-
-/Status:/ Almost Finished (at least looks like it) (Library)
-
-/Started:/ during last year
-
-([[https://github.com/shamansir/purescript-blessed][GH:purescript-blessed]])
-
-/Tags:/ #cli, #functional-programming, #purescript, #user-interface, #components
-
-
-  - *Purs-Typeclasses*
-
-The auto-generated interactive SVG poster / Web App of the PureScript TypeClasses' structure and methods and dependencies
-
-/Status:/ Finished (to some point)
-
-/Started:/ around two-three years ago
-
-([[https://github.com/shamansir/purescript-typeclasses][GH:purescript-typeclasses]], [[https://x.com/shaman_sir/status/962696001139232768][Twitter post with sources, v.1]], [[https://x.com/shaman_sir/status/1027968186979950592][Twitter post with sources, v.2]])
-
-/Tags:/ #functional-programming, #purescript, #svg
-
-
-  - *WinniPeg*
-
-Visual aid and editor for implementing PEG grammars (purescript-grammar) in PureScript
-
-/Status:/ Just Started
-
-/Started:/ during last year
-
-([[https://github.com/shamansir/winni-peg][GH:winni-peg]], [[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]])
-
-/Tags:/ #functional-programming, #purescript, #org-mode, #peg, #grammars, #parsing, #datalog
-
-
-  - *&ndORG*
-
-An attempt to develop a user-friendly web ORG-mode editor while conversing most of its `emacs` profits and build UI on visual-keystrokes-concept
-
-/Status:/ Draft
-
-/Started:/ during last year
-
-([[https://github.com/shamansir/ndorg][GH:ndorg]])
-
-/Tags:/ #functional-programming, #purescript, #org-mode, #grammars, #parsing
-
-
-  - *GEN UI Lang*
-
-On storing UI components definitions for Generative Art in JSON or D-Hall format, for Tron GUI mostly
-
-/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
-
-/Started:/ around two-three years ago
-
-([[https://github.com/shamansir/gen-ui][GH:gen-ui]])
-
-/Tags:/ #elm, #dhall, #gui, #functional-programming, #computational-arts
+Tags: #elm, #javasript, #binary, #repl, #functional-programming
 
 
   - *JS Player for Animatron*
 
 
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/animatron-player][GH:animatron-player]])
 
-/Tags:/ #javascript, #canvas, #animation
-
-
-  - *Web PD: PureData for Web*
-
-
-
-/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
-
-/Started:/ more than five years ago
-
-([[https://github.com/shamansir/web-pd][GH:web-pd]])
-
-/Tags:/ #javascript, #pure-data, #svg, #audio-generation, #visual-programming
+Tags: #javascript, #canvas, #animation
 
 
   - *JetBrains Splash Screen Generator, with RPD*
 
 
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/jb-rpd-splash][GH:jb-rpd-splash]], [[https://seti.labs.jb.gg/][SETI Generator in Action @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
 
-/Tags:/ #javascript, #visual-programming, #computational-arts, #glsl, #shaders
+Tags: #javascript, #visual-programming, #computational-arts, #glsl, #shaders
 
 
   - *sametimed*
 
 The Chat with Friedly-UI based on Google Federation One (a.k.a. Google Wave) protocol
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than ten years ago
+Started: more than ten years ago
 
 ([[https://github.com/shamansir/sametimed][GH:sametimed]])
 
-/Tags:/ #java, #google-wave
+Tags: #java, #google-wave
 
 
   - *nijiato*
 
 Finger-recognition in LISP with OpenCV
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than ten years ago
+Started: more than ten years ago
 
 ([[https://github.com/shamansir/nijiato][GH:nijiato]])
 
-/Tags:/ #lisp, #camera-tracking, #opencv
-
-
-  - *My TouchDesigner VJing sources*
-
-
-
-/Status:/ Finished (to some point)
-
-/Started:/ around two-three years ago
-
-([[https://github.com/shamansir/touchdesigner][GH:touchdesigner]])
-
-/Tags:/ #touchdesigner, #visuals
+Tags: #lisp, #camera-tracking, #opencv
 
 
   - *Open Radiant*
 
 One of the first art generators for JetBrains
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ around four-five years ago
+Started: around four-five years ago
 
 ([[https://github.com/shamansir/open-radiant][GH:open-radiant]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
 
-/Tags:/ #elm, #functional-programming, #computational-arts, #generative-art
+Tags: #elm, #functional-programming, #computational-arts, #generative-art
 
 
   - *Open Elmsfeuer*
 
 Another one of the first art generators for JetBrains
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ around four-five years ago
+Started: around four-five years ago
 
 ([[https://github.com/shamansir/open-elmsfeuer][GH:open-elmsfeuer]], [[https://origami.labs.jb.gg/][Origami Generator in Action @ CAI]])
 
-/Tags:/ #elm, #functional-programming, #computational-arts, #generative-art
+Tags: #elm, #functional-programming, #computational-arts, #generative-art
 
 
   - *PegJS - FN*
 
 The concept of functional PEG-driven parsers for JavaScript where every grammar rule is represented with a single pure function
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/pegjs-fn][GH:pegjs-fn]], [[https://shamansir.github.io/pegjs-fn/][PegJS-Fn Playground]])
 
-/Tags:/ #javascript, #functional-programming, #parsing, #grammar
+Tags: #javascript, #functional-programming, #parsing, #grammar
+
+
+  - *How to LiveCode (PDF / EPUB version)*
+
+The markup for the 1st version of "howto_co34pt_liveCode" book by coï¿¥ï¾¡pt
+
+Status: Finished (to some point)
+
+Started: around four-five years ago
+
+([[https://github.com/theseanco/howto_co34pt_liveCode/tree/master/Documents/FirstEdition][1st Edition compiled]])
 
 
   - *JavaScript Gardern*
 
+I participated in translation of JavaScript Garden to Russian language
 
+Status: Finished (to some point)
 
-/Status:/ Finished (to some point)
-
-/Started:/ more than ten years ago
+Started: more than ten years ago
 
 ([[https://github.com/shamansir/javascript-garden][GH:javascript-garden]])
 
-/Tags:/ #javascript, #translation
+Tags: #javascript, #translation
 
 
   - *Japanese Language Reference in Russian*
 
 (PDF, 300+ pages)
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than 20 years ago
+Started: more than 20 years ago
 
 
 
-/Tags:/ #japanese, #pdf, #translation
+Tags: #japanese, #pdf, #translation
 
 
   - *Python 3.5 (RU)*
 
 Translating Python 3.5 Reference @ Wikibooks
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than 15 years ago
+Started: more than 15 years ago
 
 
 
-/Tags:/ #python, #translation
+Tags: #python, #translation
 
 
   - *PDF version for how-to-livecode Book*
 
 Laying out PDF for how-to-livecode book
 
-/Status:/ Finished (to some point)
+Status: Finished (to some point)
 
-/Started:/ more than five years ago
-
-
-
-/Tags:/ #pdf, #generative-audio
-
-
-  - *purescript-doc*
+Started: more than five years ago
 
 
 
-/Status:/ Almost Finished (at least looks like it) (Library)
-
-/Started:/ during last year
-
-([[https://github.com/shamansir/purescript-doc][GH:purescript-doc]])
-
-/Tags:/ #functional-programming, #purescript, #org-mode, #markdown
-
-
-  - *purescript-org*
-
-
-
-/Status:/ In progress (Library)
-
-/Started:/ during last year
-
-([[https://github.com/shamansir/purescript-org][GH:purescript-org]])
-
-/Tags:/ #functional-programming, #purescript, #org-mode
-
-
-  - *purescript-grammar*
-
-
-
-/Status:/ In progress (Library)
-
-/Started:/ during last year
-
-([[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]])
-
-/Tags:/ #functional-programming, #purescript, #grammar, #parsing, #datalog
-
-
-  - *purescript-flex-layout*
-
-
-
-/Status:/ In progress (Library)
-
-/Started:/ around two-three years ago
-
-([[https://github.com/shamansir/purescript-flex-layout][GH:purescript-flex-layout]])
-
-/Tags:/ #functional-programming, #purescript, #bin-packing, #user-interface
+Tags: #pdf, #generative-audio
 
 
   - *Finite State Machine engine+example for PureScript*
 
+The code for the examples from my posts at dev.to
 
+Status: Finished (to some point) (Library)
 
-/Status:/ Finished (to some point) (Library)
+Started: around two-three years ago
 
-/Started:/ around two-three years ago
+([[https://github.com/shamansir/purescript-fsm][GH:purescript-fsm]], [[https://dev.to/shamansir/purescript-ui-driven-by-finite-state-machines-and-event-streams-994][FSM Post @ dev.to, p. I]], [[https://dev.to/shamansir/purescript-ui-driven-by-finite-state-machines-and-event-streams-part-ii-the-example-3m77][FSM Post @ dev.to, p. II]])
 
-([[https://github.com/shamansir/purescript-fsm][GH:purescript-fsm]])
-
-/Tags:/ #functional-programming, #purescript, #user-interface
-
-
-  - *purescript-optics-interactive*
-
-An attempt to demonstrate visually and interactively how Profunctor Optics work in Functional Languages like PureScript (mostly for my own self)
-
-/Status:/ Draft
-
-/Started:/ around two-three years ago
-
-([[https://github.com/shamansir/purescript-optics-interactive][GH:purescript-optics-interactive]])
-
-/Tags:/ #functional-programming, #purescript
+Tags: #functional-programming, #purescript, #user-interface
 
 
   - *purescript-yoga-tree-utils*
 
 
 
-/Status:/ Finished (to some point) (Library)
+Status: Finished (to some point) (Library)
 
-/Started:/ during last year
+Started: during last year
 
 ([[https://github.com/shamansir/purescript-yoga-tree-utils][GH:purescript-yoga-tree-utils]])
 
-/Tags:/ #functional-programming, #purescript, #org-mode
+Tags: #functional-programming, #purescript
+
+
+  - *Мюнхен-Флю*
+
+Blog about Munich hidden places, cafes and nightclubs, in Russian
+
+Status: Finished (to some point)
+
+Started: more than five years ago
+
+([[https://t.me/munich_flu][Telegram]])
+
+
+*** Finished (but expect to continue developing)
+
+  - *Purs-Typeclasses*
+
+The auto-generated interactive SVG poster / Web App of the PureScript TypeClasses' structure and methods and dependencies
+
+Status: Finished (but expect to continue developing)
+
+Started: around two-three years ago
+
+([[https://github.com/shamansir/purescript-typeclasses][GH:purescript-typeclasses]], [[https://x.com/shaman_sir/status/962696001139232768][Twitter post with sources, v.1]], [[https://x.com/shaman_sir/status/1027968186979950592][Twitter post with sources, v.2]])
+
+Tags: #functional-programming, #purescript, #svg
+
+
+*** Almost Finished (at least looks like it)
+
+  - *Noodle*
+
+Visual Programming for producing Generative Art and more, with CLI & Web & VR (planned) frot-ends, written in PureScript
+
+Status: Almost Finished (at least looks like it)
+
+Started: more than five years ago
+
+([[https://github.com/shamansir/noodle][GH:noodle]], [[https://noodle.labs.jb.gg/][Last working Noodle Demo]])
+
+Tags: #purescript, #visual-programming, #functional-programming, #generative-art
+
+
+  - *purescript-blessed*
+
+Port of JavaScript Blessed library, which is the powerful window management and component library for Command-Line-interfaces (CLI)
+
+Status: Almost Finished (at least looks like it) (Library)
+
+Started: during last year
+
+([[https://github.com/shamansir/purescript-blessed][GH:purescript-blessed]])
+
+Tags: #cli, #functional-programming, #purescript, #user-interface, #components
+
+
+  - *purescript-doc*
+
+The generic documents definition for PureScript inspired by Doc in LEAN (but it turned out PureScript has Dodo library which has the same purpose)
+
+Status: Almost Finished (at least looks like it) (Library)
+
+Started: during last year
+
+([[https://github.com/shamansir/purescript-doc][GH:purescript-doc]])
+
+Tags: #functional-programming, #purescript, #org-mode, #markdown
+
+
+  - *purescript-text-formatting*
+
+The generic formatting library for PureScript which allows to produce Markdown, HTML, Org org LaTeX using single formatting API
+
+Status: Almost Finished (at least looks like it) (Library)
+
+Started: during last year
+
+([[https://github.com/shamansir/purescript-doc][GH:purescript-doc]])
+
+Tags: #functional-programming, #purescript, #org-mode, #markdown
+
+
+  - *purescript-grammar*
+
+Reinventing PEG grammars and parsing in PureScript with ability to keep parsing on any error and keeping all the places of failure in the Syntax Tree, inspired by Lingo IDE by Pete Vilter
+
+Status: Almost Finished (at least looks like it) (Library)
+
+Started: during last year
+
+([[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]], [[https://petevilter.me/post/hytradboi-lingo-talk/][Lingo IDE Talk by Pete Vilter]])
+
+Tags: #functional-programming, #purescript, #grammar, #parsing, #datalog
+
+
+*** Managed (has no finished state and always actual in some sense)
+
+  - *My TouchDesigner VJing sources*
+
+
+
+Status: Managed (has no finished state and always actual in some sense)
+
+Started: around two-three years ago
+
+([[https://github.com/shamansir/touchdesigner][GH:touchdesigner]])
+
+Tags: #touchdesigner, #visuals
+
+
+*** In progress
+
+  - *purescript-org*
+
+org-mode document definition for PureScript
+
+Status: In progress (Library)
+
+Started: during last year
+
+([[https://github.com/shamansir/purescript-org][GH:purescript-org]])
+
+Tags: #functional-programming, #purescript, #org-mode
+
+
+  - *purescript-flex-layout*
+
+Bin Packing algorithm for PureScript UIs
+
+Status: In progress (Library)
+
+Started: around two-three years ago
+
+([[https://github.com/shamansir/purescript-flex-layout][GH:purescript-flex-layout]])
+
+Tags: #functional-programming, #purescript, #bin-packing, #user-interface
+
+
+*** Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+  - *Kvant*
+
+Translating Wave Function Collapse algorithm to Elm, and UI for it
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+Started: around four-five years ago
+
+([[https://github.com/shamansir/kvant][GH:kvant]], [[https://kvant.labs.jb.gg/][Kvant Demo @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
+
+Tags: #elm, #gui, #generative-art, #functional-programming, #computational-arts
+
+
+  - *GEN UI Lang*
+
+On storing UI components definitions for Generative Art in JSON or D-Hall format, for Tron GUI mostly
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+Started: around two-three years ago
+
+([[https://github.com/shamansir/gen-ui][GH:gen-ui]])
+
+Tags: #elm, #dhall, #gui, #functional-programming, #computational-arts
+
+
+  - *Web PD: PureData for Web*
+
+A try to re-implement PureData UI and audio generation (using WebAudio) in the Web
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+Started: more than five years ago
+
+([[https://github.com/shamansir/web-pd][GH:web-pd]])
+
+Tags: #javascript, #pure-data, #svg, #audio-generation, #visual-programming
+
+
+  - *Elm Symbolic Logic Game*
+
+Symbolic Logic Playground, inspired by books of Lewis Carrol
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+Started: around two-three years ago
+
+([[https://github.com/shamansir/elm-symbolic-logic][GH:elm-symbolic-logic]])
+
+Tags: #elm, #logic, #lewis-carrol, #game
+
+
+  - *Cayley Rust*
+
+The driver for Graph Database `Cayley` written using one of the first versions of Rust for training
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time) (Library)
+
+Started: more than ten years ago
+
+([[https://github.com/shamansir/cayley-rust][GH:cayley-rust]])
+
+Tags: #rust, #graphs, #database
+
+
+  - *Vimeoid*
+
+A client for Vimeo video service for HTC Hero (Android)
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+Started: more than ten years ago
+
+([[https://github.com/shamansir/vimeoid][GH:vimeoid]])
+
+Tags: #android, #java, #application
+
+
+  - *Лё Баналь*
+
+Writing short stories on users' requests
+
+Status: Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+Started: around four-five years ago
+
+([[https://t.me/le_banal][Telegram]])
+
+
+*** Just Started
+
+  - *WinniPeg*
+
+Visual aid and editor for implementing PEG grammars (purescript-grammar) in PureScript
+
+Status: Just Started
+
+Started: during last year
+
+([[https://github.com/shamansir/winni-peg][GH:winni-peg]], [[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]])
+
+Tags: #functional-programming, #purescript, #org-mode, #peg, #grammars, #parsing, #datalog
+
+
+*** Draft
+
+  - *&ndORG*
+
+An attempt to develop a user-friendly web ORG-mode editor while conversing most of its `emacs` profits and build UI on visual-keystrokes-concept
+
+Status: Draft
+
+Started: during last year
+
+([[https://github.com/shamansir/ndorg][GH:ndorg]])
+
+Tags: #functional-programming, #purescript, #org-mode, #grammars, #parsing
+
+
+  - *purescript-optics-interactive*
+
+An attempt to demonstrate visually and interactively how Profunctor Optics work in Functional Languages like PureScript (mostly for my own self)
+
+Status: Draft
+
+Started: around two-three years ago
+
+([[https://github.com/shamansir/purescript-optics-interactive][GH:purescript-optics-interactive]])
+
+Tags: #functional-programming, #purescript
 
 
   - *purescript-mahjong*
 
+Implementing Riichi Mahjong game in PureScript
 
+Status: Draft
 
-/Status:/ Draft
-
-/Started:/ around one-two years ago
+Started: around one-two years ago
 
 ([[https://github.com/shamansir/purescript-mahjong][GH:purescript-mahjong]])
 
-/Tags:/ #functional-programming, #purescript, #mahjong, #game
+Tags: #functional-programming, #purescript, #mahjong, #game
 
 
   - *PrimCivile*
 
 
 
-/Status:/ Draft
+Status: Draft
 
-/Started:/ around two-three years ago
+Started: around two-three years ago
 
 ([[https://github.com/shamansir/primcivile][GH:primcivile]])
 
-/Tags:/ #purescript, #functional-programming, #game
+Tags: #purescript, #functional-programming, #game
 
 
-  - *Elm Symbolic Logic Game*
-
-
-
-/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
-
-/Started:/ around two-three years ago
-
-([[https://github.com/shamansir/elm-symbolic-logic][GH:elm-symbolic-logic]])
-
-/Tags:/ #elm, #logic, #lewis-carrol, #game
-
-
-  - *Cayley Rust*
-
-
-
-/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time) (Library)
-
-/Started:/ more than ten years ago
-
-([[https://github.com/shamansir/cayley-rust][GH:cayley-rust]])
-
-/Tags:/ #rust, #graphs, #database
-
-
-  - *Vimeoid*
-
-
-
-/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
-
-/Started:/ more than ten years ago
-
-([[https://github.com/shamansir/vimeoid][GH:vimeoid]])
-
-/Tags:/ #android, #java, #application
-
+*** Unknown
 
   - *NodeJS Binary Parser*
 
 
 
-/Started:/ more than ten years ago
+Started: more than ten years ago
 
 ([[https://github.com/shamansir/nodejs-binary-parser][GH:nodejs-binary-parser]])
 
 
   - *Elm Goose Driven Tutorial*
 
+The Sources for Elm Goose Driven Tutorial
 
+Started: around four-five years ago
 
-/Started:/ around four-five years ago
-
-([[https://github.com/shamansir/elm-goose-driven-tutorial][GH:elm-goose-driven-tutorial]])
+([[https://github.com/shamansir/elm-goose-driven-tutorial][GH:elm-goose-driven-tutorial]], [[https://www.youtube.com/playlist?list=PL4PKtHFA6sG9DQxKeGmV-Xjn_2eKDJM_J][Elm Goose Driven Tutorial @ YouTube]])
 
 
   - *Showdown Blog*
 
 Blog engine driven by JavaScript + XSLT
 
-/Started:/ more than ten years ago
+Started: more than ten years ago
 
 ([[https://github.com/shamansir/showdown-blog][GH:showdown-blog]])
-
-
-  - *Мюнхен-Флю*
-
-
-
-/Started:/ more than five years ago
-
-
-
-
-  - *Лё Баналь*
-
-
-
-/Started:/ around four-five years ago
-
-
 
 
   - *Translation for Duke Nukem 3D Build Engine Tutorial*
 
 
 
-/Started:/ more than 20 years ago
+Started: more than 20 years ago
 
 
 
@@ -932,7 +983,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than 20 years ago
+Started: more than 20 years ago
 
 
 
@@ -941,7 +992,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/transit-maps][GH:transit-maps]])
 
@@ -950,7 +1001,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ during last year
+Started: during last year
 
 ([[https://github.com/shamansir/lean-train][GH:lean-train]])
 
@@ -959,7 +1010,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/elm-fluxus][GH:elm-fluxus]])
 
@@ -968,7 +1019,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ around two-three years ago
+Started: around two-three years ago
 
 ([[https://github.com/shamansir/elm-graph-render][GH:elm-graph-render]])
 
@@ -977,7 +1028,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ around two-three years ago
+Started: around two-three years ago
 
 ([[https://github.com/shamansir/elm-bin-pack][GH:elm-bin-pack]])
 
@@ -986,7 +1037,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/forster][GH:forster]])
 
@@ -1009,7 +1060,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/exercism][GH:exercism]])
 
@@ -1046,7 +1097,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than five years ago
+Started: more than five years ago
 
 ([[https://github.com/shamansir/rpd-puredata][GH:rpd-puredata]])
 
@@ -1090,14 +1141,7 @@ Blog engine driven by JavaScript + XSLT
 
 
 
-/Started:/ more than 15 years ago
+Started: more than 15 years ago
 
 ([[https://github.com/shamansir/cometd-demo][GH:cometd-demo]])
-
-
-  - *Corsika-Visualization*
-
-
-
-([[https://github.com/shamansir/corsika-visualization][GH:corsika-visualization]])
 
